5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1575_1332.log
== TEST (2019-03-12 11:45:39) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area, 4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:17) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(3/2**0.5*3**2, 4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:35) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area, 4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:47:11) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area, 2))
-- OUTPUT:
19.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:47:22) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area, 4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:48:18) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area*6, 4))
-- OUTPUT:
114.5513
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:48:45) 
-- CODE:
aresta =5*6
area =3/2**0.5*3**2
 
print(round(area, 4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:48:52) 
-- CODE:
aresta =5*6
area =3/2**0.5*3**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.170511
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:16) 
-- CODE:
aresta =5*6
area =3/2**0.5*3**
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2**0.5*3**
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:22) 
-- CODE:
aresta =5*6
area =3/2**0.5*3**
 
print(round(area, 4))
-- EXECUTION TIME:
0.135849
-- ERROR:
  File "/home/codebench/codes/1575/1332/main.py", line 2
    area =3/2**0.5*3**
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:34) 
-- CODE:
aresta =5*6
area =3/2**0.5*3**2
 
print(round(area, 4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:39) 
-- CODE:
aresta =5*6
area =3/2**0.5*3**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.111466
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:06) 
-- CODE:
aresta =5*6
area =3/2**0.5*3**2
print(round(area,4))
-- EXECUTION TIME:
0.160527
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:12) 
-- CODE:
aresta =5*6
area =3/2**0.5*3**2

print(round(area,4))
-- EXECUTION TIME:
0.215076
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:14) 
-- CODE:
aresta =5*6
area =3/2**0.5*3**2

print(round(area,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:18) 
-- CODE:
aresta =5*6
area =3/2**0.5*3**2

print(round(area,4))
-- EXECUTION TIME:
0.200383
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:50) 
-- CODE:
aresta =5*6
area =3/2 ** 0.5*3 ** 2

print(round(area,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:52:29) 
-- CODE:
aresta =5*6
area =3/2 ** 0.5*3 ** 2

print(round(area,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:53:07) 
-- CODE:
aresta =5
area =3/2 ** 0.5*3 ** 2

print(round(area,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:53:49) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:20) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:54:23) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area,4))
-- EXECUTION TIME:
0.206727
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:25) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:17) 
-- CODE:
aresta =5**2
area =3/2**0.5*3

print(round(area,4))
-- OUTPUT:
6.364
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:23) 
-- CODE:
aresta =5**2
area =3/2**0.5*3

print(round(area,4))
-- EXECUTION TIME:
0.222028
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6.364
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:25) 
-- CODE:
aresta =5**2
area =3/2**0.5*3

print(round(area,4))
-- OUTPUT:
6.364
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:54) 
-- CODE:
aresta =5
area =3/2**0.5*3*5**2

print(round(area,4))
-- OUTPUT:
159.099
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:33) 
-- CODE:
aresta =5
area =3/2**0.5*3*aresta**2

print(round(area,4))
-- OUTPUT:
159.099
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:57:18) 
-- CODE:
aresta =5
area =3/2*3**0.5*aresta**2

print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:57:21) 
-- CODE:
aresta =5
area =3/2*3**0.5*aresta**2

print(round(area,4))
-- EXECUTION TIME:
0.192842
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
